# DCS-SG

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: mcnet_all_commands.txt  mcnet_all_plan.csv
model_sources/: requirements.txt
model_sources/expert_assistant/model/: expert_assistant_enhanced_torch.py  expert_assistant_torch.py
model_sources/iqformer/: LICENSE
model_sources/iqformer/model/: IQFormer.py  IQFormer_adapter.py  IQFormer_channel_adapter.py  IQFormer_enhanced.py
model_sources/iqformer/utils/: stft_features.py
model_sources/mcnet/: mcnet_model.py
model_sources/tr_amr/: enhanced_tr_amr.py  vit_model_2018.py
scripts/: generate_dataset.py  plan_boundary_cases.py
src/dcs_sg/: config.py  generator.py  storage.py
